# dash_robot

./: .gitignore  README.md
dash_bringup/: CMakeLists.txt  package.xml
dash_bringup/launch/: display_robot.launch.py  joystick.launch.py  launch_gz_sim.launch.py  launch_mapping.launch.py  launch_nav.launch.py  launch_robot.launch.py  launch_sim.launch.py
dash_bringup/rviz/: disp_robot.rviz  display_robot.rviz  nav2_default_view.rviz
dash_bringup/scripts/: virtual_wheel_states.py
dash_description/: CMakeLists.txt  package.xml
dash_description/config/: dash_diff_drive_controller.yaml  display.rviz  gz_bridge.yaml  my_controller.yaml
dash_description/launch/: display.launch.py  gazebo.launch.py  launch_sim.launch.py
dash_description/meshes/: Arduino_Uno_1.stl  Battery_1.stl  Castor1_1.stl  Castor1_2.stl  Gearbox1_1.stl  Gearbox1_2.stl  base_link.stl  l_wheel_1.stl  motor_driver_1.stl  plate2_1.stl  plate3_1.stl  r_wheel_1.stl  raspberry_1.stl  stanoff2_1.stl  stanoff3_1.stl  stanoff4_1.stl  stanoff5_1.stl  stanoff6_1.stl  stanoff_1.stl
dash_description/meshes/turtlebot_arena/: model.config  model.sdf
dash_description/urdf/: dash.gazebo  dash.trans  dash.xacro  gazebo_control.xacro  lidar.xacro  materials.xacro  ros2_control.xacro
dash_description/worlds/: empty.sdf  tugbot_warehouse.sdf  turtlebot_arena.sdf
dash_nav2/: CMakeLists.txt  package.xml
dash_nav2/config/: ekf.yaml  mapper_params_online_async.yaml  nav2_bringup_params.yaml
dash_nav2/launch/: dash_bringup.launch.py  dash_navbringup.launch.py
dash_nav2/maps/: turtlebot_arena.data  turtlebot_arena.pgm  turtlebot_arena.yaml
dash_nav2/rviz/: nav2_mapping_view.rviz
diffdrive_arduino/description/ros2_control/: diffbot.ros2_control.xacro
diffdrive_arduino/hardware/: diffbot_system.cpp
diffdrive_arduino/hardware/include/diffdrive_arduino/: arduino_comms.hpp  diffbot_system.hpp
rf2o_laser_odometry/launch/: rf2o_laser_odometry.launch.py
rf2o_laser_odometry/src/: CLaserOdometry2D.cpp  CLaserOdometry2DNode.cpp
ros_arduino_bridge/ROSArduinoBridge/: ROSArduinoBridge.ino  commands.h  encoder_driver.h  encoder_driver.ino  motor_driver.h  motor_driver.ino
